@@ -14,6 +14,7 @@
 * Fix: Decoy Mined Area (#12)
 * Fix: Decoy Mined Area (, Fenced) (#12)
 * Fix: Airfield Zone (#14)
+* Fix: Crash when cancelling clone feature (#9)
 
 0.0.2
 * Added some command to edit text modifiers to command palette.
